<resources>
    <string name="app_name">SCANEAT</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Annulla</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="lists">Liste</string>
    <string name="search">Cerca</string>
    <string name="dialog_title">DAI UN NOME ALLA TUA LISTA</string>
    <string name="list_name">Nome lista: </string>
    <string name="confirm_button">OK</string>
    <string name="empty">Elenco vuoto</string>
    <string name="cancel_list">Sei sicuro di voler eliminare la tua lista?</string>
    <string name="search_lens">Cerca</string>
    <string name="search_barcode">Scan</string>
    <string name="drawer_option1">Liste</string>
    <string name="drawer_option2">Cerca</string>
    <string name="drawer_option3">Opzione 3</string>
    <string name="drawer_option4">Opzione 4</string>
    <string name="drawer_option5">Opzione 5</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="write">Scrivi</string>
    <string name="new_list">Inserisci una nuova lista</string>
    <string name="new_product">Inserisci un nuovo prodotto</string>
    <string name="product_name">Nome prodotto: </string>
    <string name="product_brand">Marca: </string>
    <string name="quantity">Quantità</string>
    <string name="quantText">Q.tà</string>
    <string name="db_updated">Database aggiornato con successo!</string>
    <plurals name="delete_lists">
        <item quantity="one">Eliminazione di 1 lista</item>
        <item quantity="other">Eliminazione di %d liste</item>
    </plurals>
    <plurals name="delete_products">
        <item quantity="one">Eliminazione di 1 prodotto</item>
        <item quantity="other">Eliminazione di %d prodotti</item>
    </plurals>
    <string name="delete_product">Eliminazione prodotto/i</string>
    <string name="delete_product_message">Sei sicuro di voler procedere con l\'eliminazione?</string>
    <string name="modify_list">Modifica il nome della tua lista</string>
    <string name="db_loading_title">Attendere</string>
    <string name="db_loading_content">Download in corso..</string>
    <string name="no_products_matching">Nessun prodotto trovato</string>
    <string name="logout">Log Out</string>
    <string name="no_account_yet">Non sei ancora registrato? Crea un account!</string>
    <string name="create_account">Crea un account</string>
    <string name="already_a_member">Già registrato? Accedi!</string>
    <string name="close">Chiudi</string>
    <string name="add_to_list">Aggiungi a una lista</string>
    <string name="ingredients">Ingredienti:</string>
    <string name="intolerances">Caratteristiche:</string>
    <string name="none">nessuna</string>
    <string name="barcode">Barcode:</string>
    <string name="add_to_favorite">Aggiungi ai preferiti</string>
    <string name="modify_item">Proponi una modifica</string>
    <string name="login_to_modify">Devi essere loggato per modificare un prodotto!</string>
    <string name="logout_done">Logout effettuato!</string>
    <string name="login_done">Login effettuato!</string>
    <string name="login_failed">Login fallito!</string>
    <string name="creating_account">Sto creando l\'account...</string>
    <string name="account_created">Account creato</string>
    <string name="already_registered">Utente già registrato!</string>
    <string name="registration_error">Errore nella registrazione!</string>
    <string name="registration_failed">Registrazione fallita</string>
    <string name="registration">Registrazione</string>
    <string name="favourites">Preferiti</string>
    <string name="remove_favourites">Sei sicuro di voler eliminare questo preferito?</string>
    <string name="no_favourites">Nessun preferito</string>
    <string name="pick_a_list">Scegli una lista</string>
    <string name="pick_a_quantity">Scegli una quantità</string>
    <string name="settings">Impostazioni</string>
    <string name="change_password">Modifica password</string>
    <string name="change_password_ok">Password modificata</string>
    <string name="change_password_error">Modifica password fallita</string>
    <string name="changing_password">Sto modificando la password...</string>
    <string name="no_connection_alert">Attenzione</string>
    <string name="no_connection_message">Connessione a internet assente. Controllare e riprovare</string>
    <string name="oops_error">oops!</string>
    <string name="something_went_wrong">Qualcosa è andato storto, riprova</string>
    <string name="not_available">non disponibile</string>
    <string name="not_login">Area riservata, effettua il login</string>
    <string name="change_name_ok">Nome modificato</string>
    <string name="change_name_err">Modifica nome fallita</string>
    <string name="propose_to_insert_the_product">Vuoi proporre l\'inserimento nel database? (Te ne saremmo grati!)</string>
    <string name="already_in_list_title">Quante volte lo vuoi acquistare??</string>
    <string name="already_in_list_message">Sembra che il prodotto sia già stato inserito in questa lista</string>
    <string name="propose_product_button">Proponi</string>
    <string name="try_again">Ritenta</string>
    <string name="anonymous">Anonimo</string>
    <string name="info">Informazioni</string>
    <string name="credits">Sviluppata da:\n\nAcquaviva Luca\nComini Giulia\nDanesi Federico\n\n\nVersione:\n\n1.0\n\n\nContatti:\n\ninfo@scaneat.it</string>
    <string name="add_to_chosen_list">Aggiungi a questa lista</string>
    <string name="EAN_13_format">EAN_13</string>
    <string name="EAN_8_format">EAN_8</string>
    <string name="modify_product_dialog">Modifica il prodotto</string>
    <string name="login_to_add_product">Devi essere loggato per aggiungere un prodotto!</string>
    <string name="add_to_favourites">Vuoi davvero aggiungere questo prodotto ai preferiti?</string>
    <string name="download_ext_db_title">Nessun prodotto trovato nel database</string>
    <string name="download_ext_db_message">Scaricalo subito!</string>
    <string name="download_it">Scarica</string>
    <string name="modify_product_title">Proponi una modifica</string>
    <string name="reserved_area_login_required_message">Attenzione! Devi essere loggato per poter proseguire</string>
    <string name="propose_product_title">Nuova proposta</string>
    <string name="submit_proposal">INVIA</string>
    <string name="format_error">Il formato non è supportato! Prova con qualcos\'altro</string>
    <string name="propose_error_name">Inserire il nome del prodotto</string>
    <string name="propose_error_brand">Inserire la marca del prodotto</string>
    <string name="propose_error_ingredients">Inserire gli ingredienti del prodotto</string>
    <string name="product_already_in_db_title">Prodotto già inserito!</string>
    <string name="product_already_in_db_message">Scarica l\'ultima versione del database, troverai questo prodotto</string>
    <string name="proposal_received_title">Grazie!</string>
    <string name="proposal_received_message">Abbiamo ricevuto la tua proposta! Riceverai una notifica se il prodotto verrà approvato</string>
    <string name="you_already_proposed_this_title">Attento</string>
    <string name="you_already_proposed_this_message">Hai già proposto l\'inserimento di questo prodotto. Attendi finchè non sarà approvato</string>

    <string name="personal_area_title">Area personale</string>
    <string name="username">Username:</string>
    <string name="mail">Mail:</string>
    <string name="number_of_proposals">Prodotti proposti:</string>
    <string name="notification_insert_product_approved"> è stato approvato.</string>
    <string name="notification_insert_product_refused"> è stato rifiutato.</string>
    <string name="notification_modify_product_approved"> è stato modificato come da te suggerito.</string>
    <string name="notification_modify_product_refused">Modifica rifiutata per: </string>
    <string name="successfully_deleted">Cancellazione effettuata con successo</string>
    <string name="list_created">Lista creata! Clicca sulla lista per inserire i prodotti</string>
    <string name="successfully_modified">Lista modificata con successo!</string>
    <string name="product_successfully_inserted">inserito con successo nella lista!</string>

    <plurals name="notification_counter">
        <item quantity="one">Hai 1 nuova notifica.</item>
        <item quantity="other">Hai %d nuove notifiche.</item>
    </plurals>

</resources>
