<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars = "vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:id="@+id/layout_dialog_insert"
        >

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#FFFFBB33"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_modifyProduct_title"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:text="@string/new_product"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/product_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="@dimen/dialog_item"
            android:hint="@string/product_name"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/product_brand"
            android:textSize="@dimen/dialog_item"
            android:inputType="text"
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/product_brand" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text= "@string/quantity"
                android:textSize="@dimen/dialog_item"/>

            <com.app.project.scaneatapp.MyNumberPicker
                android:id="@+id/quantity"
                android:layout_width="100dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                max="100"
                min="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <CheckBox android:id="@+id/checkbox_no_gluten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/nogluten_24"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="@dimen/checkbox_icon_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name" />
            <CheckBox android:id="@+id/checkbox_no_lactose"
                android:layout_marginLeft="@dimen/icon_checkbox_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/nomilk_24"
                android:layout_marginLeft="@dimen/checkbox_icon_margin"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name" />
            <CheckBox android:id="@+id/checkbox_vegan"
                android:layout_marginLeft="@dimen/icon_checkbox_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/naturalfood_24"
                android:layout_marginLeft="@dimen/checkbox_icon_margin"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>