<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/primary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ActionBarPopupThemeOverlay"/>

    <RelativeLayout
        android:id="@+id/list_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            />

        <ListView
            android:id="@+id/myListViewForProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:layout_alignParentTop="true"/>
            <!--android:layout_below="@+id/toolbar"-->


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/floating_action_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            fab:menu_animationDelayPerItem="55"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_buttonSpacing="0dp"
            fab:menu_colorNormal="@color/accent"
            fab:menu_colorPressed="@color/accent"
            fab:menu_colorRipple="@color/iron"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_colorNormal="#333"
            fab:menu_labels_colorPressed="#444"
            fab:menu_labels_colorRipple="#66efecec"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_position="left"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_textColor="#f2f1f1"
            fab:menu_labels_textSize="15sp"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="#66aff198"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="4dp"
            fab:menu_showShadow="true">


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/write_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_create_white_24dp"
                fab:fab_label="@string/write"
                fab:fab_size="mini"
                fab:menu_colorNormal="@color/accent"
                fab:menu_colorPressed="@color/accent"
                fab:menu_colorRipple="@color/iron"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_white_24dp"
                fab:fab_label="@string/search_lens"
                fab:fab_size="mini"
                fab:menu_colorNormal="@color/accent"
                fab:menu_colorPressed="@color/accent"
                fab:menu_colorRipple="@color/iron"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_barcode_search"
                fab:fab_label="@string/search_barcode"
                fab:fab_size="mini"
                fab:menu_colorNormal="@color/accent"
                fab:menu_colorPressed="@color/accent"
                fab:menu_colorRipple="@color/iron"
                />

        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/search_from_list"
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent" />

</RelativeLayout>