<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars = "vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/product_toolbar"
            android:title="prova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme" />

        <TextView
            android:id="@+id/product_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="4dp"
            android:text="prova"
            android:gravity="center_horizontal"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            android:ellipsize="marquee"
            android:singleLine="true"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/product_info_brand"
            android:text="marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="@dimen/dialog_title"
            android:textStyle="italic"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="marquee"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/product_info_ingredients"
            android:text="ingredienti"
            android:textSize="@dimen/dialog_item"
            android:maxLines = "10"
            android:scrollbars = "vertical"
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:id="@+id/product_info_barcode"
            android:text="barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_item"
            android:padding="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"/>


        <RelativeLayout
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/intolerances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intolerances"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/dialog_item" />
            <TextView
                android:id="@+id/product_info_no_intolerances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_toRightOf="@+id/intolerances"
                android:textSize="@dimen/dialog_item"
                android:visibility="gone"/>
            <ImageView
                android:src="@drawable/nogluten_24"
                android:id="@+id/product_info_no_gluten"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="@dimen/checkbox_icon_margin"
                android:layout_toRightOf="@+id/intolerances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:src="@drawable/nomilk_24"
                android:id="@+id/product_info_no_lactose"
                android:layout_marginLeft="@dimen/checkbox_icon_margin"
                android:layout_toRightOf="@+id/product_info_no_gluten"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:src="@drawable/naturalfood_24"
                android:id="@+id/product_info_vegan"
                android:layout_marginLeft="@dimen/checkbox_icon_margin"
                android:layout_toRightOf="@+id/product_info_no_lactose"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>